[package]
name = "consumer"
version = "0.1.0"
authors = ["Francisco López <donflopez@gmail.com>"]
edition = "2018"

[dependencies]
crossbeam = "0.7.1"
rand = "0.7.0"
rusoto_core = "0.40.0"
rusoto_kinesis = "0.40.0"
serde = "1.0.97"
serde_json = "1.0.40"
serde_derive = "1.0.97"
serde_yaml = "0.8"
bytes = "0.4.12"
redis = "0.11.0"
amiquip = "0.3.0"
reqwest = "0.9.19"
lapin-futures = "0.25.0"
tokio = "0.1.22"
futures = "0.1.28"
failure = "0.1.5"
log = "0.4.7"
env_logger = "0.6.2"
lapin = "0.25.0"