[package]
name = "server"
version = "0.1.0"
authors = ["Francisco López <donflopez@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.97"
serde_json = "1.0.40"
serde_derive = "1.0.97"
actix-web = "1.0"
sled = "0.24.1"
rand = "0.7.0"
tokio = "0.1.22"